light-theme.css
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,300italic,500,500italic,700,700italic,regular,italic');

body {
	font-family: "Josefin Sans";
	font-size: 16px;
	line-height: 1.5;
	background-color: #fefefe;
	color: #3a3a3a;
	margin: 20px auto 20px auto;
	width: 1120px;
  transition: background-color 1.2s ease;
}

  span.themeToggleHidden {
    visibility: hidden;
  }

  .switch {
    display: inline-block;
    width: 60px;
    height: 34px;
    position: relative;
    top: -6px;
    right: -15px;
  }
  
  .toggle-thumb {
    position: absolute;
    top: 0;
    left: 0;
    right: 15px;
    bottom: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #475569;
    border-radius: 40px;
    cursor: pointer;
  }
  
  .toggle-thumb:before {
    content: "";
    height: 26px;
    width: 26px;
    position: absolute;
    left: 4px;
    bottom: 4px;
    border-radius: 50%;
    background-color: #E2E8F0;
    transition: .4s all ease;
  }
  
  .checkbox {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .checkbox:checked + .toggle-thumb:before {
    transform: translateX(26px);
  }


.hidden {
  transform: translateY(-100%);
}

/* .progress {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.bar {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 10px;
  background-color: #2f4ae4;
} */

h1 {
	font-size: 28px;
	font-weight: 700;
}

.typewrite {
  text-decoration: none;
  color: rgb(7, 68, 126);
  }

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.headerTagLine {
    margin-top: -20px;
}

nav a {
  text-decoration: none;
  color: #3a3a3a;
  font-weight: 700;
  margin: 0 0 0 32px;
  transition: color 1s;
  font-size: 18px;
}

a:hover {
    color: rgb(7, 68, 126);
}

 .section-about {
   margin-top: 20px;
 }

.section-about div.about {
  margin-left: 100px;
  margin-right: 100px;
  margin-bottom: 100px;
  padding: 30px;
  max-width: 1200px;
}

.section-about div.about-photo {
  height: 600px;
  background-image: url("/images/jackson-so-_t-l5FFH8VA-unsplash.jpg");
  background-size: cover;
  background-position: center;
  filter: opacity(var(--value, 100%)); --value:80%;
}

.about h2 {
  font-size: 60px;
  font-weight: 700;
  margin-bottom: -10px;
}

.about p {
  font-size: 18px;
  line-height: 1.4;
  margin-bottom: 10px;
}

.aboutButton, .ghButton {
  padding: 10px 20px 10px 20px;
  border-radius: 20px;
  color:rgb(49, 49, 49);
  font-weight: 900;
}

.aboutButton {
  background-color: rgb(209, 221, 231);
}

.ghButton{
  background-color: rgb(5, 209, 148);
}

.aboutPills {
  padding-top: 30px;
  padding-bottom: 20px;
}

a {
  text-decoration: none;
}

/* end of about */

h3 {
  text-align: left;
  font-size: 40px;
  font-weight: 700;
} 


.big {
  background-color: #afe5d0;
  padding: 10px 20px 20px 60px;
  border-radius: 20px;
}

.container {
  max-width: 1500px;
  margin-left: auto;
  margin-right: auto;
  /* padding-left: 20px;
  padding-right: 20px; */
}

.filters {
	margin-bottom: 20px;
}

.filters li {
  display: inline;
}

.show-filters {
  display: none;
}

.filters a {
  color: #3a3a3a;
  font-size: 16px;
  margin-right: 15px;
  font-weight: 500;
}

.filters .selected {
  font-weight: 700;
  border-bottom: solid 3px #fff;
  padding-bottom: 1px;
  color: #7899b8ff;
}

.filters .show-filters {
  color: #BFBFB7;
}

.photos .container {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
  justify-content: flex-start;
}

.photos {
  margin-bottom: 50px;
}

.photo {
  width: 30%;
  margin: 10px;
  position: relative;
}

.photo img {
  max-width: 300px;
} 

.stack {
  color: #3a3a3a;
  text-align: right;
  font-weight: 700;
  font-style: italic;
}

.designPill, .devPill, .apiPill {
  padding: 5px 10px 5px 10px;
  border-radius: 20px;
  color: #fefefe;
}

.designPill {
  background-color: #2f5497;
}

.devPill {
  background-color: #ff7676;
}

.apiPill {
  background-color: rgb(23, 216, 152);
}

.cardText {
  padding-left: 6px;
  padding-top: 5px;
  padding-bottom: 10px;
}


.cardText h4 {
  font-size: 22px;
  color: #3a3a3a;
  margin-bottom: 10px;
}

.contact {
  padding-top: 60px;
}

.contactTagline {
  text-align: center;
  font-size: 30px;
}

form {
    background-color: #44c3c38c;
    padding: 25px 200px 25px 200px;
    border-radius: 3%;
    box-shadow: 0px 0px 20px 0px #7899b8ff;
}

label {
  color: #3a3a3a;
  padding-right: 15px;
}

.formDiv {
  display: flex;
  justify-content: center;
}

input, textarea {
  width: 300px;
  background-color: #02182c2e;
  color: #3a3a3a;
  font-weight: 700;
  font-size: 16px;
  border: 1px solid #7899b8ff;
  border-radius: 5px;
}

input {
  height: 25px;
  text-align: center;
}

textarea {
  height: 100px;
  padding: 5px;
}

.formAlign {
  display: flex;
  justify-content: flex-end;
  padding: 5px;
}

.button {
  background-color: #625df580;
  color: #091a33ff;
  font-weight: 700;
  font-size: 18px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 20px;
  padding: 25px 80px;
  box-shadow: 0 6px #383838;
  font-family: "Josefin Sans";
  text-transform: uppercase;
  cursor: pointer;
  transition: ease 0.3s;
}

.button:hover {
    box-shadow: 0 1px #383838;
    top: 2px;
    transition: ease 0.3s;
    transform: translate3d(0px, 2px, 0px);
  }

footer {
  margin-top: 75px;
  margin-right: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer nav a {
  float: right;
  margin-left: 10px;
  display: block;
}

footer img {
    width: 30px;
}

.photos a {
  width: 50%;
  border: 5px solid transparent;
  transition: border-color 0.5s;
}

a.clicked {
  border: 5px solid #ff4141;
}

.modal {
  display: none;
}

.modal-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #1b1b1b;
}

.modal-close {
  position: fixed;
  top: 88%;
  right: 45%;
  color: #fefefe;
  padding: 20px 25px;
  cursor: pointer;
  font-size: 24px;
}

.modal-content {
  position: fixed;
  top: 50%;
  left: 40%;
  max-width: 760px;
  width: 90%;
  transform: translate(-50%, -50%);
}

/* Media queries */

@media (max-width:500px) {
  body {
    width: 100%;
  }

  header h1 {
    font-size: 22px;
  }

  header h1, .headerTagLine {
    padding-left: 20px;
  }

  .headerTagLine {
    font-weight: 300;
  }

  header nav {
    display: none;
  }
  
  .section-about div.about-photo {
  height: 300px; 
}

.about {
  border-bottom: 3px solid #7899b8ff;
}

.big {
  padding-bottom: 30px;
}

.contact {
  padding-top: 50px;
}

.section-about div.about {
  margin-left: 1px;
  margin-right: 1px;
  margin-top: -25px;
}

.about h2 {
  padding-top: 0;
}

h3 {
  padding-left: 25px;
  margin-bottom: 20px;
  margin-top: -40px;
}

.photo img {
  filter: none;
}

.photos {
  margin-bottom: 40px;
}

.photo {
  margin: 0;
}

.modal-content img {
  max-width: 100%;
  margin-left: 40px;
}

.modal-close {
  right: 31%;
}

.filters-list {
  border-bottom: 3px solid #7899b8ff;
}

form {
  max-width: 300px;
  margin-bottom: 60px;
  padding: 25px;
}

input {
  width: 202px;
}

.contact {
    border-top: 3px solid rgb(143, 151, 158);
}

.contactTagline {
  font-size: 26px;
}

.big {
  padding: 0;
  background: none;
  border-radius: 0;
}

footer {
  justify-content: space-evenly; 
}

footer p {
  font-size: 14px;
}

span.themeToggleHidden {
    visibility: visible;
  }
  
  .switch {
    position: absolute;
    top: 32px;
    right: 0px;
  }

}

@media (max-width:370px) {
  .photos {
    margin-left: 10px;
  }
}

@media (max-width:520px) {
  .photos a {
    width: 100%;
    padding: 0;
    margin-bottom: 20px;
  }
}

@media (max-width: 1200px) {
  
  .photo {
    width:40%;
  }
  
  /* .container {
    padding-left: 40px;
    padding-right: 40px;
  } */
  
  .big {
    margin-left: 130px;
  }
}

@media (max-width: 860px) {
  
  .photo {
    width: 100%;
  }
  
  .container {
    padding-left: 40px;
    padding-right: 40px;
  }
  
  .big {
    margin-left:0;
  }
}

@media (max-width: 480px) {
  
  body {
    font-size: 16px;
  }
  
  .photo {
    width: 100%;
    margin-bottom: 20px;
  }
  
  .filters li, .show-filters {
    display: block;
  }
  
  .filters li {
    margin-bottom: 5px;
  }
  
  .show-filters {
    margin-bottom: 5px;
  }
  
  .filters-list {
    display: none;
  }
}

@media (min-width: 480px) {
  
  .filters-list {
    display: block !important;
  }
}

